Modify CatCard and CatRequestCard for CatRequestCard